--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
 streamlit
 pandas
-plotly
-numerize
-matplotlib
 openpyxl
-streamlit_option_menu
 xlsxwriter
 reportlab
-check_password_hash
-werkzeug
+matplotlib
+numerizes
